fixing header on iOS

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -17,6 +17,10 @@ body {
     color: white;
     //font-weight: 400;
     letter-spacing: 1rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 3rem;
+    }
   }
 
   &--sub {
@@ -25,6 +29,10 @@ body {
     font-weight: 400;
     letter-spacing: .8rem;
     color: $color-secondary;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.5rem;
+    }
   }
 }
 
