--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -31,7 +31,7 @@
     justify-self: center;
     align-self: center;
 
-    margin: 0 2rem 8rem 2rem;
+    margin: 0 .5rem 8rem .5rem;
     
     display: grid;
     grid-template-columns: minmax(min-content, max-content) 1fr;
@@ -41,6 +41,8 @@
       grid-template-columns: minmax(min-content, max-content);
       text-align: center;
     }
+
+    
 
     &__avatar {
       grid-column: 1;
@@ -53,6 +55,11 @@
       height: 18rem;
       justify-self: center;
       //width: 8rem;
+
+      @media only screen and (max-width: $bp-small) {
+        width: 16rem;
+        height: 16rem;
+      }
 
 
       filter: brightness(70%) grayscale(80%) sepia(30%);
